# seg

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  buildin.samfile  cli.js  dist-workspace.toml  install.js  package-lock.json  package.json
.github/workflows/: publish-npm.yml  release.yml
.samengine/: links.info.txt  linksaver.json  samfile
src/: birthdaytool.rs  buildin.rs  genicon.rs  help.rs  linksaver.rs  main.rs  samfile.rs
src/linksaver/: add.rs  format.rs  mod.rs
