[package]
name = "samtool"
version = "0.1.26"
edition = "2024"
authors = ["Shadowdara"]
readme = "README.md"
description = "the fast cli tool for samengine"
license = "Apache-2.0"
include = ["LICENSE", "README.md", "Cargo.toml", "/src/"]
keywords = ["samengine", "cli"]
repository = "https://github.com/shadowdara/samengine"


[dependencies]
fluaterm = "0.2.2"
samfileparser = "0.1.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# sx = { path = "../sx" }
chrono = { version = "0.4", features = ["serde"] }

#minify-html = "0.18.1"

[target.'cfg(windows)'.dependencies]
win-utf8-rs = "0.2.1"

[[bin]]
name = "seg"
path = "src/main.rs"

[profile.release]
opt-level = 3       # 0 -> no optimizing, 3 -> max speed
lto = "fat"         # oder "thin" für schnelleren Build
codegen-units = 1   # bessere Optimierung, aber langsamerer Compile
panic = "abort"     # spart etwas Platz, leicht schneller
strip = true        # entfernt Debug-Symbole (optional)
debug = false
incremental = false
